<resources>
    <string name="app_name">XpensManager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">XpensManager</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">XpensManager</string>
    <string name="preference_file_key">XpensManager</string>
    <string name="database_name">XpensManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_stats">Stats</string>
    <string name="title_category">Category</string>
    <string name="title_payment">Payment</string>
    <string name="title_group">Group</string>
    <string name="title_notifications">Settings</string>
    <string name="add_own_expense"><u>Add Own Expense</u></string>
    <string name="title_activity_expense_view">MainActivity</string>
</resources>