<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/group"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/category1"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/card"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/stats"
        android:title="@string/title_stats" />

    <!--<item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_notifications" />-->

</menu>